[package]
name = "gtk-rs-channels"
version = "0.1.0"
authors = ["Alexis Lozano <alexis.pascal.lozano@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.gtk]
package = "gtk4"
git = "https://github.com/gtk-rs/gtk4-rs"
